remove config.toml added ignore error of json on config.yaml

--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,10 @@ languageCode: "en-us"
 title: "Mustafa Khaled"
 theme: hugo-profile
 
+build:
+  ignoreErrors:
+    - "error-remote-getjson"
+
 outputs:
   home:
     - "HTML"
