Revert "remove config.toml"
This reverts commit 83773af27f02e2a61134c26a086e09270b5147eb.

--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,9 @@ languageCode: "en-us"
 title: "Mustafa Khaled"
 theme: hugo-profile
 
-ignoreErrors: ["error-remote-getjson"]
+build:
+  ignoreErrors:
+    - "error-remote-getjson"
 
 outputs:
   home:
