added ignoreErrors: ["error-remote-getjson"]

--- a/config.yaml
+++ b/config.yaml
@@ -2,10 +2,7 @@ baseURL: "/"
 languageCode: "en-us"
 title: "Mustafa Khaled"
 theme: hugo-profile
-
-build:
-  ignoreErrors:
-    - "error-remote-getjson"
+ignoreErrors: ["error-remote-getjson"]
 
 outputs:
   home:
