--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseURL: "/"
 languageCode: "en-us"
-title: "Mustafa Khaled"
+title: "Hugo Profile"
 theme: hugo-profile
 ignoreErrors: ["error-remote-getjson"]
 
@@ -110,7 +110,7 @@ params:
     align: ms-auto # Left: ms-auto | center: mx-auto | right: me-auto | Default: ms-auto
     # brandLogo: "/logo.png" # Logo for the brand | default is the favicon variable
     # showBrandLogo: false # Show brand logo in nav bar | default is true
-    brandName: "Mustafa Khaled" # Brand name for the brand | default is the title variable
+    brandName: "Hugo Profile" # Brand name for the brand | default is the title variable
     disableSearch: false
     # searchPlaceholder: "Search"
     stickyNavBar:
