--- a/config.yaml
+++ b/config.yaml
@@ -54,10 +54,10 @@ Menus:
     #   weight: 2
 
 params:
-  title: "Hugo Profile"
+  title: "Mustafa Khaled"
   description: Text about my cool site
   # staticPath: ""  # The path to serve the static files from
-  favicon: "/fav.png"
+#  favicon: "/fav.png"
 
   # Whether to serve bootstrap css and js files from CDN or not. Can be set to true, "css" or "js" to choose between
   # serving both, only the css, or only the js files through the CDN. Any other value will make so that CDN is not used.
@@ -110,8 +110,8 @@ params:
     align: ms-auto # Left: ms-auto | center: mx-auto | right: me-auto | Default: ms-auto
     # brandLogo: "/logo.png" # Logo for the brand | default is the favicon variable
     # showBrandLogo: false # Show brand logo in nav bar | default is true
-    brandName: "Hugo Profile" # Brand name for the brand | default is the title variable
-    disableSearch: false
+    brandName: "Mustafa Khaled" # Brand name for the brand | default is the title variable
+    disableSearch: true
     # searchPlaceholder: "Search"
     stickyNavBar:
       enable : true
@@ -131,26 +131,32 @@ params:
     intro: "Hi, my name is"
     title: "Mustafa."
     subtitle: "I build cool Android apps"
-    content: "A passionate web app developer. I tend to make use of modern web technologies to build websites that look great, feel fantastic, and function correctly."
-    image: /images/hero.svg
+    content: "A passionate Senior/Lead Android developer. I tend to make use of modern Android technologies to build apps that look great, feel fantastic, and function correctly."
+    image: /images/mypic.jpg
     bottomImage:
       enable: true
     # roundImage: true # Make hero image circular | default false
     button:
       enable: true
       name: "Resume"
-      url: "#"
+      url: "https://drive.google.com/uc?export=download&id=1oRb8O7Ltl06gGTOIrrU7B8xS-o6fjk3f"
       download: true
       newPage: false
     socialLinks:
       fontAwesomeIcons:
+        - icon: fab fa-linkedin
+          url: https://www.linkedin.com/in/mustafa-khaled/
+        - icon: fab fa-medium
+          url: https://medium.com/@mustafa_khaled
         - icon: fab fa-github
-          url: https://example.com
+          url: https://github.com/mustafaKhaled/
         - icon: fab fa-x-twitter
-          url: https://example.com
-      customIcons:
-        - icon: /fav.png
-          url: "https://example.com"
+          url: https://x.com/Mus_Khaled
+        - icon: fab fa-stack-overflow
+          url: https://stackoverflow.com/users/12424486/mustafakhaled
+#      customIcons:
+#        - icon: /fav.png
+#          url: "https://example.com"
 
   # About
   about:
