--- a/config.yaml
+++ b/config.yaml
@@ -30,11 +30,11 @@ Menus:
       title: Blog posts
       url: /blogs
       weight: 1
-    - identifier: gallery
-      name: Gallery
-      title: Blog posts
-      url: /gallery
-      weight: 2
+#    - identifier: gallery
+#      name: Gallery
+#      title: Blog posts
+#      url: /gallery
+#      weight: 2
     #Dropdown menu
     # - identifier: dropdown
     #   title: Example dropdown menu
@@ -121,7 +121,7 @@ params:
       disableAbout: false
       disableExperience: false
       disableEducation: false
-      disableProjects: false
+      disableProjects: true
       disableAchievements: false
       disableContact: false
 
@@ -162,86 +162,102 @@ params:
   about:
     enable: true
     title: "About Me"
-    image: "/images/me.png"
+#    image: "/images/me.png"
     content: |-
-      I am a software developer with a passion for web development. I have a background in computer science and mathematics, and I have a strong interest in the intersection of technology and art. I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA.
+      I'm a Senior Android Developer with +7 years of experience in Android. During my journey in Android Development, I participated
+      in building well-known apps that are currently used by millions of users. Besides being an Android Developer, I'm a speaker in well-known Android and Software events.
 
-      I am currently working on a project that will be used to help people find the best way to get around the city.
     skills:
       enable: true
       title: "Here are a few technologies I've been working with recently:"
       items:
-        - "HTML"
-        - "CSS"
-        - "JavaScript"
-        - "React"
-        - "Node"
-        - "Express"
+        - "Android"
+        - "Kotlin"
+        - "Java"
+        - "Python"
+        - "CI/CD"
+        - "MVVM"
+        - "Dagger Hilt"
+        - "Jetpack Compose"
+        - "Coroutines"
+        - "Spring Boot"
+        - "Clean Architecture"
 
   # Experience
   experience:
     enable: true
     # title: "Custom Name"
     items:
-      - job: "Senior Software Developer"
-        company: "Facebook"
-        companyUrl: "https://example.com"
-        date: "Jan 2022 - present"
+      - job: "Senior Android Developer"
+        company: "REWE International AG"
+        companyUrl: "https://www.rewe-group.com/en/"
+        date: "Sept 2022 - present"
         featuredLink:
           enable: true
           name: "View the project"
-          url: "https://example.com"
-        content: "I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city."
+          url: "https://play.google.com/store/apps/details?id=at.billa.service"
+        content: "I am currently working as a Senior Android Developer at REWE International AG in Vienna Austria, we are building a whitelabel greocery app for the 
+        most popular grocery in Austria. 
+        
+        - Building a scalable architecture for whitelabel solution \n
+        - Build a full-stack feature by developing backend/Android tickets \n
+        - Refactor legacy features to Jetpack compose instead of XML \n
+        - Enhancing the automation streamline of Gitlab, to boast development lifecycle \n
+        - Participating in refinement and pre-refinements to refine stories to be shared with the developers \n
+        - Reviewing merge requests based on scalability, maintainability, SOLID, etc \n
+        - Communicate with the stakeholders to resolve this issues efficiently \n
+        - Building Unit test strategy to increase unit testing coverage"
 
-      - job: "Software Developer"
-        company: "Amazon"
-        companyUrl: "https://example.com"
-        date: "Sep 2020 - Dec 2021"
+
+      - job: "Senior Android Developer "
+        company: "Bitpanda"
+        companyUrl: "https://www.bitpanda.com/en"
+        date: "Oct 2021 - Sept 2022"
         featuredLink:
           enable: true
-          url: "https://example.com"
+          url: "https://play.google.com/store/apps/details?id=com.bitpanda.bitpanda"
         info:
           enable: true
-          content: I worked as a software developer for more than one year in Amazon.
         content: |
-          I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
+          I contributed as a senior Android developer to build a well-known trading application
+          - Develop/maintain features for Bitpanda Cryptocurrency
+          - Focusing on unit test for features, continuously
+          - Focus on applying the latest android technologies announced
+          - Maintain and observe the project architecture and guarantee clean architecture is applied
+          - Sharing ideas and technologies in community of prac9ce of the Android team
 
-          - Lead backend developer for a product.
-          - Created a frontend design for a product.
-
-      - job: "Junior Software Developer"
-        company: "Apple"
-        companyUrl: "https://example.com"
-        date: "Jan 2020 - Aug 2020"
+      - job: "Senior Android Developer"
+        company: "Vodafone"
+        companyUrl: "https://www.vodafone.com/careers/professional-career-areas/shared-services"
+        date: "Nov 2020 - Oct 2021"
         info:
           enable: false
         featuredLink:
           enable: true
-          url: "https://example.com"
+          url: "https://play.google.com/store/search?q=My%20vodafone&c=apps"
         content: |
-          I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
+          I contributed as a senior Android developer to build a whitelabel soltion for all My Vodafone apps all over the world. we were building features to let the developers integrate with it
 
-          - Lead backend developer for a product.
-          - Created a frontend design for a product.
+          - Working with core team to develop abstracted features that been used in all My Vodafone Apps around the world
+          - coach and monitor junior developers
+          - Working with the team in building fully unit test project using jUnit, Robelctric, MockK and Mockito to ensure high quality and reliable code.
+          - Improve code quality by applying clean code and SOLID principles
+          - Support all Vodafone teams around the world to solve their issue My Vodafone app in their local market.
 
-      - job: "UI/UX Designer"
-        company: "Netflix"
-        companyUrl: "https://example.com"
-        date: "June 2017 - Nov 2019"
+      - job: "Software Engineer"
+        company: "Intercom Enterprises"
+        companyUrl: "https://www.intercom.com.eg/"
+        date: "May 2018 - Jan 2020"
         featuredLink:
           enable: true
-          url: "https://example.com"
+          url: "https://play.google.com/store/apps/details?id=eg.intercom.banknet.tub"
         content: |
-          I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
+          I contributed as an Android developer to build a high quality mobile banking solution.
 
-          - Lead backend developer for a product.
-          - Created a frontend design for a product.
-
-      - job: "Product Designer"
-        company: "Google"
-        companyUrl: "https://example.com"
-        date: "Feb 2016 - Mar 2017"
-        content: "I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city."
+          - Applied CI/CD on GitLab for the product
+          - Worked with architectural design patterns
+          - Applied clean architecture for the project and MVVM as a presentational architecture
+          - Slight developing of backend service for android using php.
 
   # Education
   education:
@@ -249,114 +265,66 @@ params:
     # title: "Custom Name"
     index: false
     items:
-      - title: "Master of Business Administration"
+      - title: "Bachelor of Computer Science"
         school:
-          name: "University of California, Berkeley"
-          url: "https://example.org"
-        date: "2013 - 2015"
-        GPA: "3.8 out of 5.0"
-        content: |-
-          Extracurricular Activities
-            - Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            - Tempora esse, eaque delectus nulla quo doloribus itaque expedita alias natus optio totam maxime nihil excepturi velit a animi laborum hic similique.
-      - title: "Bachelor of Science in Computer Science"
-        school:
-          name: "Massachusetts Institute of Technology"
-          url: "https://example.org"
-        date: "2009 - 2013"
-        GPA: "3.9 out of 5.0"
-        content: |-
-          I Publiced two papers in the ACM SIGCHI Conference on Artificial Intelligence.
-          - [Fast and Accurate Object Detection with a Single Convolutional Neural Network](https://example.com)
-          - Face mask detection using a single convolutional neural network.
+          name: "Fayoum University"
+          url: "https://www.fayoum.edu.eg/english/"
+        date: "2012 - 2016"
 
-          Extracurricular Activities
-            - Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            - Tempora esse, eaque delectus nulla quo doloribus itaque expedita alias natus optio totam maxime nihil excepturi velit a animi laborum hic similique.
-        featuredLink:
-          enable: true
-          name: "My academic record"
-          url: "https://example.com"
       - title: "High School"
         school:
-          name: "Thomas Jefferson High School for Science and Technology."
-          url: "https://example.org"
-        GPA: "4.2 out of 5.0"
-        featuredLink:
-          enable: true
-          url: "https://example.com"
-
-  # Achievements
-  achievements:
-    enable: true
-    # title: "Custom Name"
-    items:
-      - title: Google kickstart runner
-        content: I solved all problems with optimal solution.
-        url: https://example.com
-        image: /images/achievment.jpg
-      - title: Facebook Hackathon Winner
-        content: Developed a product using Artificial Intelligence.
-        image: /images/achievment.jpg
-      - title: Hugo Profile
-        content: Developed a theme and getting 1K+ downloads per month.
-        url: "https://github.com/gurusabarish/hugo-profile"
-        image: /images/achievment.jpg
-      - title: Microsoft Imagine Runner
-        content: We are developed a product which can help others.
-      - title: Google Summer of Code
-        content: Contributed to a open source project.
-        url: https://example.com
+          name: "Islamic Language School"
+        date: "2000 - 2012"
 
   # projects
-  projects:
-    enable: true
-    # title: "Custom Name"
-    items:
-      - title: Hugo Profile
-        content: A highly customizable and mobile first Hugo template for personal portfolio and blog.
-        image: /images/projects/profile.png
-        featured:
-          name: Demo
-          link: https://hugo-profile.netlify.app
-        badges:
-          - "Hugo"
-          - "Bootstrap"
-          - "Javascript"
-        links:
-          - icon: fa fa-envelope
-            url: mailto:?subject=Hugo%20Profile%20Template&body=Check%20it%20out:%20https%3a%2f%2fhugo-profile.netlify.app%2fblog%2fmarkdown-syntax%2f
-          - icon: fab fa-github
-            url: https://github.com/gurusabarish/hugo-profile
-          - icon: fab fa-twitter
-            url: https://twitter.com/intent/tweet?text=Check+it+out:&url=https%3A%2F%2Fgithub.com%2Fgurusabarish%2Fhugo-profile
-
-      - title: Image Converter
-        content: A web app to convert image to pdf, png to jpg, png to jpg and png to webp without database using django.
-        image: /images/projects/converter.jpg
-        featured:
-          name: Demo
-          link: https://django-converter.herokuapp.com
-        badges:
-          - "Django"
-          - "Bootstrap"
-        links:
-          - icon: fab fa-github
-            url: https://github.com/gurusabarish/converter
-
-      - title: Hugo Profile V2
-        content: A clean and simple Hugo template for personal portfolio and blog.
-        image: /images/projects/profile2.jpg
-        featured:
-          name: Demo V2
-          link: https://hugo-profile-2.netlify.app
-        badges:
-          - "Hugo"
-          - "Bootstrap"
-          - "Javascript"
-        links:
-          - icon: fab fa-github
-            url: https://github.com/gurusabarish/HugoProfileV2
+#  projects:
+#    enable: true
+#    # title: "Custom Name"
+#    items:
+#      - title: Hugo Profile
+#        content: A highly customizable and mobile first Hugo template for personal portfolio and blog.
+#        image: /images/projects/profile.png
+#        featured:
+#          name: Demo
+#          link: https://hugo-profile.netlify.app
+#        badges:
+#          - "Hugo"
+#          - "Bootstrap"
+#          - "Javascript"
+#        links:
+#          - icon: fa fa-envelope
+#            url: mailto:?subject=Hugo%20Profile%20Template&body=Check%20it%20out:%20https%3a%2f%2fhugo-profile.netlify.app%2fblog%2fmarkdown-syntax%2f
+#          - icon: fab fa-github
+#            url: https://github.com/gurusabarish/hugo-profile
+#          - icon: fab fa-twitter
+#            url: https://twitter.com/intent/tweet?text=Check+it+out:&url=https%3A%2F%2Fgithub.com%2Fgurusabarish%2Fhugo-profile
+#
+#      - title: Image Converter
+#        content: A web app to convert image to pdf, png to jpg, png to jpg and png to webp without database using django.
+#        image: /images/projects/converter.jpg
+#        featured:
+#          name: Demo
+#          link: https://django-converter.herokuapp.com
+#        badges:
+#          - "Django"
+#          - "Bootstrap"
+#        links:
+#          - icon: fab fa-github
+#            url: https://github.com/gurusabarish/converter
+#
+#      - title: Hugo Profile V2
+#        content: A clean and simple Hugo template for personal portfolio and blog.
+#        image: /images/projects/profile2.jpg
+#        featured:
+#          name: Demo V2
+#          link: https://hugo-profile-2.netlify.app
+#        badges:
+#          - "Hugo"
+#          - "Bootstrap"
+#          - "Javascript"
+#        links:
+#          - icon: fab fa-github
+#            url: https://github.com/gurusabarish/HugoProfileV2
 
   #Contact
   contact:
@@ -364,7 +332,7 @@ params:
     # title: "Custom Name"
     content: My inbox is always open. Whether you have a question or just want to say hi, I’ll try my best to get back to you!
     btnName: Mail me
-    btnLink: mailto:gurusabarisha@gmail.com
+    btnLink: mailto:mustafakhaled290@gmail.com
     # formspree:
     #   enable: true # `contact.email` value will be ignored
     #   formId: abcdefgh # Take it from your form's endpoint, like 'https://formspree.io/f/abcdefgh'
