--- a/config.yaml
+++ b/config.yaml
@@ -30,11 +30,19 @@ Menus:
       title: Blog posts
       url: /blogs
       weight: 1
-#    - identifier: gallery
-#      name: Gallery
-#      title: Blog posts
-#      url: /gallery
-#      weight: 2
+
+    - identifier: talks
+      name: Talks
+      title: Talks
+      url: /talks
+      weight: 1
+
+
+    #    - identifier: gallery
+    #      name: Gallery
+    #      title: Blog posts
+    #      url: /gallery
+    #      weight: 2
     #Dropdown menu
     # - identifier: dropdown
     #   title: Example dropdown menu
@@ -57,7 +65,7 @@ params:
   title: "Mustafa Khaled"
   description: Text about my cool site
   # staticPath: ""  # The path to serve the static files from
-#  favicon: "/fav.png"
+  #  favicon: "/fav.png"
 
   # Whether to serve bootstrap css and js files from CDN or not. Can be set to true, "css" or "js" to choose between
   # serving both, only the css, or only the js files through the CDN. Any other value will make so that CDN is not used.
@@ -76,8 +84,8 @@ params:
   animate: true
 
   theme:
-    # disableThemeToggle: true
-    # defaultTheme: "light" # dark
+  # disableThemeToggle: true
+  # defaultTheme: "light" # dark
 
   font:
     fontSize: 1rem # default: 1rem
@@ -154,15 +162,15 @@ params:
           url: https://x.com/Mus_Khaled
         - icon: fab fa-stack-overflow
           url: https://stackoverflow.com/users/12424486/mustafakhaled
-#      customIcons:
-#        - icon: /fav.png
-#          url: "https://example.com"
+  #      customIcons:
+  #        - icon: /fav.png
+  #          url: "https://example.com"
 
   # About
   about:
     enable: true
     title: "About Me"
-#    image: "/images/me.png"
+    #    image: "/images/me.png"
     content: |-
       I'm a Senior Android Developer with +7 years of experience in Android. During my journey in Android Development, I participated
       in building well-known apps that are currently used by millions of users. Besides being an Android Developer, I'm a speaker in well-known Android and Software events.
@@ -277,54 +285,54 @@ params:
         date: "2000 - 2012"
 
   # projects
-#  projects:
-#    enable: true
-#    # title: "Custom Name"
-#    items:
-#      - title: Hugo Profile
-#        content: A highly customizable and mobile first Hugo template for personal portfolio and blog.
-#        image: /images/projects/profile.png
-#        featured:
-#          name: Demo
-#          link: https://hugo-profile.netlify.app
-#        badges:
-#          - "Hugo"
-#          - "Bootstrap"
-#          - "Javascript"
-#        links:
-#          - icon: fa fa-envelope
-#            url: mailto:?subject=Hugo%20Profile%20Template&body=Check%20it%20out:%20https%3a%2f%2fhugo-profile.netlify.app%2fblog%2fmarkdown-syntax%2f
-#          - icon: fab fa-github
-#            url: https://github.com/gurusabarish/hugo-profile
-#          - icon: fab fa-twitter
-#            url: https://twitter.com/intent/tweet?text=Check+it+out:&url=https%3A%2F%2Fgithub.com%2Fgurusabarish%2Fhugo-profile
-#
-#      - title: Image Converter
-#        content: A web app to convert image to pdf, png to jpg, png to jpg and png to webp without database using django.
-#        image: /images/projects/converter.jpg
-#        featured:
-#          name: Demo
-#          link: https://django-converter.herokuapp.com
-#        badges:
-#          - "Django"
-#          - "Bootstrap"
-#        links:
-#          - icon: fab fa-github
-#            url: https://github.com/gurusabarish/converter
-#
-#      - title: Hugo Profile V2
-#        content: A clean and simple Hugo template for personal portfolio and blog.
-#        image: /images/projects/profile2.jpg
-#        featured:
-#          name: Demo V2
-#          link: https://hugo-profile-2.netlify.app
-#        badges:
-#          - "Hugo"
-#          - "Bootstrap"
-#          - "Javascript"
-#        links:
-#          - icon: fab fa-github
-#            url: https://github.com/gurusabarish/HugoProfileV2
+  #  projects:
+  #    enable: true
+  #    # title: "Custom Name"
+  #    items:
+  #      - title: Hugo Profile
+  #        content: A highly customizable and mobile first Hugo template for personal portfolio and blog.
+  #        image: /images/projects/profile.png
+  #        featured:
+  #          name: Demo
+  #          link: https://hugo-profile.netlify.app
+  #        badges:
+  #          - "Hugo"
+  #          - "Bootstrap"
+  #          - "Javascript"
+  #        links:
+  #          - icon: fa fa-envelope
+  #            url: mailto:?subject=Hugo%20Profile%20Template&body=Check%20it%20out:%20https%3a%2f%2fhugo-profile.netlify.app%2fblog%2fmarkdown-syntax%2f
+  #          - icon: fab fa-github
+  #            url: https://github.com/gurusabarish/hugo-profile
+  #          - icon: fab fa-twitter
+  #            url: https://twitter.com/intent/tweet?text=Check+it+out:&url=https%3A%2F%2Fgithub.com%2Fgurusabarish%2Fhugo-profile
+  #
+  #      - title: Image Converter
+  #        content: A web app to convert image to pdf, png to jpg, png to jpg and png to webp without database using django.
+  #        image: /images/projects/converter.jpg
+  #        featured:
+  #          name: Demo
+  #          link: https://django-converter.herokuapp.com
+  #        badges:
+  #          - "Django"
+  #          - "Bootstrap"
+  #        links:
+  #          - icon: fab fa-github
+  #            url: https://github.com/gurusabarish/converter
+  #
+  #      - title: Hugo Profile V2
+  #        content: A clean and simple Hugo template for personal portfolio and blog.
+  #        image: /images/projects/profile2.jpg
+  #        featured:
+  #          name: Demo V2
+  #          link: https://hugo-profile-2.netlify.app
+  #        badges:
+  #          - "Hugo"
+  #          - "Bootstrap"
+  #          - "Javascript"
+  #        links:
+  #          - icon: fab fa-github
+  #            url: https://github.com/gurusabarish/HugoProfileV2
 
   #Contact
   contact:
