--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseURL: "/"
 languageCode: "en-us"
-title: "Hugo Profile"
+title: "Mustafa Khaled"
 theme: hugo-profile
 ignoreErrors: ["error-remote-getjson"]
 
@@ -65,7 +65,7 @@ params:
   title: "Mustafa Khaled"
   description: Text about my cool site
   # staticPath: ""  # The path to serve the static files from
-  #  favicon: "/fav.png"
+  favicon: "/logo_icon_no_background.png"
 
   # Whether to serve bootstrap css and js files from CDN or not. Can be set to true, "css" or "js" to choose between
   # serving both, only the css, or only the js files through the CDN. Any other value will make so that CDN is not used.
