update social media icon links

--- a/config.yaml
+++ b/config.yaml
@@ -356,11 +356,9 @@ params:
       enable: true
       disableFeaturedImage: false
     socialNetworks:
-      github: https://github.com
-      linkedin: https://linkedin.com
-      twitter: https://twitter.com
-      instagram: https://instagram.com
-      facebook: https://facebook.com
+      github: https://github.com/mustafaKhaled/
+      linkedin: https://www.linkedin.com/in/mustafa-khaled/
+      twitter: https://x.com/Mus_Khaled
 
   # List pages like blogs and posts
   listPages:
